--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "A cli to create initial babel configuration in a easy way",
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "babel-node src/index.js --presets es2015,stage-2",
-    "build": "babel src -d lib --presets es2015,stage-2",
+    "test": "tape -r babel-register tests/**/*.js",
+    "start": "babel-node src/index.js",
+    "build": "babel src -d lib",
     "prepublish": "npm run build"
   },
   "repository": {
@@ -41,6 +41,8 @@
     "babel-plugin-transform-vue-jsx": "^3.5.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "babel-preset-vue": "^2.0.0"
+    "babel-preset-vue": "^2.0.0",
+    "babel-register": "^6.26.0",
+    "tape": "^4.8.0"
   }
 }
